--- a/index.html
+++ b/index.html
@@ -1,1 +1,93 @@
-朝ごはん
+<!DOCTYPE html>
+<html lang="ja">
+    <head>
+        <meta charset="utf-8">
+        <title>ネクロな日常</title>
+        <meta name="description" content="html開発記録">
+    </head>
+
+    <body>
+        <h1>朝ごはん</h1>
+        <h2>昼ごはん</h2>
+        <h3>晩御飯</h3>
+        <h4>夜食</h4>
+        <h5>脳死</h5>
+        <h6>kanasii</h6>
+        <p>ここは一行目です</p>
+        <p2>ここは二行目です</p2>
+        <img src="img/Photo_2018-12-17-231533.png" alt="バグ"><br>
+        <a href="https://www.youtube.com/watch?v=7Q9tsh2LNrk">バトオペ２</a>
+        <a href="https://www.google.co.jp/webhp?tab=rw">
+        <img src="img/googlelogo_color_272x92dp.png" alt="google"></a>
+
+        <ul>
+            <li>ガンダム</li>
+            <li>エヴァンゲリオン</li>
+            <li>アニメ</li>
+        </ul>
+
+        <ol>
+            <li>お金</li>
+            <li>顔</li>
+            <li>体</li>
+        </ol>
+
+        <table border="1">
+            <tr>
+                <th colspan="2">クラスと番号</th>
+            </tr>
+            <tr>
+                <td rowspan="2">A</td>
+                <td>21</td>
+            </tr>
+            <tr>
+                <td>35</td>
+            </tr>  
+        </table>
+
+        名前:<input type="text" placeholder="名前を入れてね">
+        検索:<input type="serch" placeholder="検索したいのか？">
+
+        選べ<br>
+        鉱物:
+        <input type="radio" name="prefer" value="回答しない" checked>回答しない
+        <input type="radio" name="prefer" value="鉄">鉄
+        <input type="radio" name="prefer" value="金">金
+        <input type="radio" name="prefer" value="プラチナ">プラチナ
+
+        選べ<br>
+        鉱物:
+        <input type="checkbox" name="like" value="銅">銅
+        <input type="checkbox" name="like" value="鉄">鉄
+        <input type="checkbox" name="like" value="金">金
+        <input type="checkbox" name="like" value="プラチナ">プラチナ
+
+        <input type="submit" value="返信する">
+
+        <p>チェックボックス</p>
+        <select name="complex">
+            <option value="mother">母</option>
+            <option value="father">父</option>
+            <option value="loli">幼女</option>
+            <option value="shota">男の子</option>
+
+        <textarea name="message" placeholder="死亡理由を加入してください"></textarea>
+            
+
+
+        </select>
+
+
+    　　
+
+    </body>
+        
+
+
+
+
+
+
+
+
+</html>
